# Gluten

./: README.en.md  README.md  TPP.txt  pom.xml
backends-clickhouse/src/test/resources/csv-data/: expected_end_of_line.csv  sign_at_end_float.csv  sign_at_end_int.csv
backends-omni/: pom.xml
backends-omni/src/main/java/org/apache/gluten/metrics/: Metrics.java  OmniIteratorMetricsJniWrapper.java  OperatorMetrics.java
backends-omni/src/main/java/org/apache/gluten/runtime/: OmniRuntimeJniWrapper.java
backends-omni/src/main/java/org/apache/gluten/vectorized/: OmniColumnVector.java  OmniColumnVectorUtils.java  OmniColumnarBatchInIterator.java  OmniColumnarBatchOutIterator.java  OmniNativePlanEvaluator.java  OmniPlanEvaluatorJniWrapper.java  VectorTransferUtils.java
backends-omni/src/main/scala/org/apache/gluten/columnarbatch/: OmniBatch.scala
backends-omni/src/main/scala/org/apache/gluten/datasources/: OmniInternalRow.scala
backends-omni/src/main/scala/org/apache/gluten/execution/: FilterExecTransformer.scala  OmniBroadcastBuildSideRDD.scala  OmniBroadcastHashJoinExecTransformer.scala  OmniBroadcastNestedLoopJoinExecTransformer.scala  OmniColumnarBuildSideRelation.scala  OmniColumnarToRowExec.scala  OmniFilterExecTransformer.scala  OmniGenerateExecTransformer.scala  OmniHashAggregateExecPullOutBaseHelper.scala  OmniHashAggregateExecTransformer.scala  OmniJoinUtils.scala  OmniProjectExecTransformer.scala  OmniRollUpOptimizeTransformer.scala  OmniSerializerResult.scala  OmniShuffleHashJoinExecTransformer.scala  OmniSortMergeJoinExecTransformer.scala  OmniTopNTransformer.scala  RowToOmniColumnarExec.scala
backends-omni/src/main/scala/org/apache/gluten/expression/: ExpressionTransformer.scala  OmniExpressionAdaptor.scala
backends-omni/src/main/scala/org/apache/gluten/extension/: ExpressionTransformer.scala  FallbackBroadcastHashJoinRules.scala  OmniRewriteJoin.scala  PushDownFilterToOmniScan.scala  ReWriteAQEShuffleRead.scala
backends-omni/src/main/scala/org/apache/gluten/init/: OmniNativeBackendInitializer.java
backends-omni/src/main/scala/org/apache/gluten/metrics/: JoinMetricsUpdater.scala  NestedLoopJoinMetricsUpdater.scala  (+16 more)
cpp-omni/: .clang-format  CMakeLists.txt  build.sh  config.h
cpp-omni/src/: CMakeLists.txt
cpp-omni/src/compute/: OmniPlanConverter.cpp  OmniPlanConverter.h  ProtobufUtils.h  Runtime.cpp  Runtime.h  WholeStageResultIterator.cpp  WholeStageResultIterator.h
cpp-omni/src/config/: OmniConfig.cpp  OmniConfig.h
cpp-omni/src/jni/: SparkJniWrapper.cpp  SparkJniWrapper.hh  deserializer.cpp  deserializer.hh  jni_common.cpp  jni_common.h
cpp-omni/src/proto/: vec_data.proto
cpp-omni/src/shuffle/: splitter.cpp  splitter.h
cpp-omni/src/substrait/: SubstraitParser.cpp  SubstraitParser.h  SubstraitToOmniExpr.cpp  SubstraitToOmniExpr.h  SubstraitToOmniPlan.cpp  SubstraitToOmniPlan.h  SubstraitToOmniPlanValidator.cpp  SubstraitToOmniPlanValidator.h
cpp-omni/test/: CMakeLists.txt
dev/vcpkg/ports/simdjson/: portfile.cmake
gluten-arrow/: pom.xml
gluten-core/src/main/scala/org/apache/gluten/: GlutenBuildInfo.scala
gluten-substrait/: pom.xml
gluten-ut/common/: pom.xml
gluten-ut/spark33/: pom.xml
gluten-ut/test/: pom.xml
package/: pom.xml
(+99 files in other folders)
